feat: add firebase_options.dart to gitignore for security
- Prevent sensitive Firebase API keys from being committed
- Protect firebase_options.dart file from GitHub exposure
- Ensure API keys remain secure in local environment

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,7 @@ app.*.map.json
 **/google-services.json
 **/GoogleService-Info.plist
 firebase_app_id_file.json
+lib/firebase_options.dart
 
 # Environment variables and secrets
 .env
